adding model and prediction files

--- a/desicionTree.ipynb
+++ b/desicionTree.ipynb
@@ -331,14 +331,13 @@
     }
    ],
    "source": [
-    "clf_gini = DecisionTreeClassifier(criterion = \"gini\", random_state = 100,\n",
-    "                               max_depth=3, min_samples_leaf=5)\n",
+    "clf_gini = DecisionTreeClassifier(criterion = \"gini\", random_state = 100,max_depth=3, min_samples_leaf=5)\n",
     "clf_gini.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -353,6 +352,28 @@
     "y_pred = clf_gini.predict(X_test)\n",
     "#y_pred\n",
     "print (accuracy_score(y_test,y_pred)*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['finalized_model.sav']"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.externals import joblib\n",
+    "filename = 'finalized_model.sav'\n",
+    "joblib.dump(clf_gini, filename)"
    ]
   }
  ],
